#17643: Bugfix: Mobile Web - RTL - Copy icon overlaps recovery key

--- a/css/dialogs/backup-recovery-dialog.css
+++ b/css/dialogs/backup-recovery-dialog.css
@@ -62,3 +62,7 @@
     padding: 0;
     border-radius: 0;
 }
+.rtl .recovery-key.input button.icon-only {
+    left: 14px;
+    right: unset;
+}
